compiler/testData/asJava/lightClasses/compilationErrors/LocalInAnnotation.kt
// Validation
// See KT-24323
// FIR_COMPARISON

@Retention(AnnotationRetention.RUNTIME /* ) was removed */
                   annotation class Validation()

